--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "\"Shriya Sundriyal\"",
@@ -12,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "morgan": "^1.10.0",
+    "nodeman": "^1.1.2",
     "pg": "^8.7.3"
   }
 }
